# JLC_R_util

./: .clang-format  .gitignore  CMakeLists.txt  README.md  免换料费专区.xlsx
.github/workflows/: actions.yml  build.yml  release.yml
include/: R_gen.hpp  z_gen.hpp
libs/qtcoro/: awaitable.hpp  library.json  qtcoro.hpp
src/: I_Calc.cpp  I_Calc.hpp  I_Calc.ui  LLC_window.cpp  LLC_window.hpp  LLC_window.ui  RCD_window.cpp  RCD_window.hpp  RCD_window.ui  R_gen.cpp  R_select_window.cpp  R_select_window.hpp  R_select_window.ui  main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui
tools/: index.ts  package.json  tsconfig.json
